--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -38,11 +38,11 @@
     "    corrections_table['dur'] /= 24.0\n",
     "    corrections_table['dep'] *= 1e6\n",
     "\n",
-    "    joined_table = joined_table.join(corrections_table, on='tic_id', how='right')\n",
-    "    joined_table['Epoc'] = joined_table['epo']\n",
-    "    joined_table['Duration'] = joined_table['dur']\n",
-    "    joined_table['Period'] = joined_table['per']\n",
-    "    joined_table['Transit_Depth'] = joined_table['dep']\n",
+    "    joined_table = joined_table.join(corrections_table, on='tic_id', how='left')\n",
+    "    joined_table['Epoc'] = np.where(joined_table['epo'].isna(), joined_table['Epoc'], joined_table['epo'])\n",
+    "    joined_table['Duration'] = np.where(joined_table['dur'].isna(), joined_table['Duration'], joined_table['dur'])\n",
+    "    joined_table['Period'] = np.where(joined_table['per'].isna(), joined_table['Period'], joined_table['per'])\n",
+    "    joined_table['Transit_Depth'] = np.where(joined_table['dep'].isna(), joined_table['Transit_Depth'], joined_table['dep'])\n",
     "\n",
     "    joined_table = joined_table.reset_index()[[\n",
     "        'tic_id', 'RA', 'Dec', 'Tmag', 'Epoc', 'Period', 'Duration',\n",
@@ -82,13 +82,16 @@
     "    joined_table = joined_table.join(labels_table, on='tic_id', how='inner')\n",
     "\n",
     "\n",
-    "    toi = pd.read_csv('/mnt/tess/labels/tce_toi_vetting_processed.csv', header=0, low_memory=False).set_index('tic_id')\n",
-    "    toi['Duration'] /= 24.0\n",
+    "    toi = pd.read_csv('/mnt/tess/labels/tce_toi_vetting_v2.csv', header=0, low_memory=False).set_index('tic_id')\n",
     "\n",
+    "    np.random.seed(1117)\n",
+    "    toi['rand'] = np.random.randint(0, 100, [len(toi)])\n",
     "    toi['Split'] = toi.apply(lambda r: 'train' if r['rand'] < 80 else 'test'if r['rand'] >= 90 else 'val', axis=1)\n",
-    "    toi = toi.drop(columns=['Unnamed: 0', 'rand'])\n",
-    "\n",
+    "    toi = toi.drop(columns=['rand'])\n",
+    "    \n",
     "    if include_toi:\n",
+    "        # Trust the curated labels. This might help us to detect any inconsisytencies in TOI.\n",
+    "        toi = toi[~toi.index.isin(joined_table.index.values)]\n",
     "        joined_table = joined_table.append(toi)\n",
     "\n",
     "\n",
@@ -116,16 +119,16 @@
     "\n",
     "\n",
     "t_train, t_val, t_test, all_table = generate_data(True)\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-test.csv')\n",
+    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v6-toi-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v6-toi-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v6-toi-test.csv')\n",
+    "\n",
+    "all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')\n",
     "\n",
     "t_train, t_val, t_test, all_table = generate_data(False)\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v5-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v5-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-vetting-v5-test.csv')\n",
-    "\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
+    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v6-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v6-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v6-test.csv')\n"
    ]
   },
   {
@@ -134,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_table.sample(3)"
+    "all_table.sample(30)"
    ]
   },
   {
@@ -155,11 +158,10 @@
     "\n",
     "def clean_tois():\n",
     "    toi = pd.read_csv('/mnt/tess/labels/toi_pc_instar.csv', header=0, low_memory=False)\n",
-    "    toi.describe()\n",
-    "    \n",
+    "\n",
     "    toi = toi[toi['instar'] == False]\n",
-    "    toi = toi[toi['Master Disposition'].isin(['P', 'VPC', 'KP', 'PC', 'CPC'])]\n",
     "    toi = toi[toi['planet_period'] < 99999]\n",
+    "    toi = toi[toi['Master Disposition'].isin(['P', 'VPC', 'KP', 'PC', 'CPC'])]\n",
     "\n",
     "    toi['tic_id'] = toi['star_tic']\n",
     "    toi['RA'] = toi['star_ra']\n",
@@ -167,20 +169,21 @@
     "    toi['Tmag'] = toi['star_tmag']\n",
     "    toi['Epoc'] = toi['planet_epoch'] - 2457000\n",
     "    toi['Period'] = toi['planet_period']\n",
-    "    toi['Duration'] = toi['planet_tdur']\n",
+    "    toi['Duration'] = toi['planet_tdur'] / 24.0\n",
     "    toi['Transit_Depth'] = toi['planet_depth']\n",
     "    toi['Sectors'] = -1.0\n",
     "    toi['teff'] = toi['star_teff']\n",
     "    toi['logg'] = toi['star_logg']\n",
     "    toi['SN'] = None\n",
     "    toi['Qingress'] = None\n",
+    "\n",
     "    toi['disp_p'] = 1\n",
     "    toi['disp_e'] = 0\n",
-    "    toi['disp_n'] = 0\n",
     "    toi['disp_b'] = 0\n",
     "    toi['disp_t'] = 0\n",
     "    toi['disp_u'] = 0\n",
-    "    \n",
+    "    toi['disp_n'] = 0\n",
+    "\n",
     "    toi = toi[[\n",
     "        'tic_id',\n",
     "        'RA',\n",
@@ -204,10 +207,89 @@
     "         'disp_t',\n",
     "         'disp_u',\n",
     "    ]]\n",
-    "    \n",
+    "\n",
     "    toi['rand'] = toi.apply(lambda r: np.random.randint(0, 100), axis=1)\n",
+    "\n",
+    "    ebs = pd.read_csv('/mnt/tess/labels/ebs_ephemerides.csv', header=0, low_memory=False)\n",
+    "    ebs['dur'] /= 24.0\n",
+    "    ebs['dep'] *= 1e6\n",
+    "\n",
+    "    ebs['tic_id'] = ebs['tic']\n",
+    "    ebs['RA'] = None\n",
+    "    ebs['Dec'] = None\n",
+    "    ebs['Tmag'] = None\n",
+    "    ebs['Epoc'] = ebs['epo']\n",
+    "    ebs['Period'] = ebs['per']\n",
+    "    ebs['Duration'] = ebs['dur']\n",
+    "    ebs['Transit_Depth'] = ebs['dep']\n",
+    "    ebs['Sectors'] = None\n",
+    "    ebs['star_rad'] = None\n",
+    "    ebs['star_mass'] = None\n",
+    "    ebs['teff'] = None\n",
+    "    ebs['logg'] = None\n",
+    "    ebs['SN'] = None\n",
+    "    ebs['Qingress'] = None\n",
+    "\n",
+    "    eb_labels = pd.read_csv('/mnt/tess/labels/additionalebs.csv', header=None, low_memory=False)\n",
+    "    ebs = ebs.set_index('tic_id').join(eb_labels.set_index(0), how='inner').reset_index()\n",
+    "    ebs['tic_id'] = ebs['index']\n",
+    "\n",
+    "    def set_label(row):\n",
+    "        row['disp_p'] = 0\n",
+    "        row['disp_e'] = 1\n",
+    "        if row[3] == 'b':\n",
+    "            row['disp_b'] = 1\n",
+    "            row['disp_t'] = 0\n",
+    "            row['disp_u'] = 0\n",
+    "        elif row[3] == 't':\n",
+    "            row['disp_b'] = 0\n",
+    "            row['disp_t'] = 1\n",
+    "            row['disp_u'] = 0\n",
+    "        elif row[3] == 'u':\n",
+    "            row['disp_b'] = 0\n",
+    "            row['disp_t'] = 0\n",
+    "            row['disp_u'] = 1\n",
+    "        else:\n",
+    "            raise ValueError(row)\n",
+    "\n",
+    "        row['disp_n'] = 0\n",
+    "        return row\n",
+    "\n",
+    "    ebs = ebs.apply(set_label, axis=1)\n",
+    "\n",
+    "    ebs = ebs[[\n",
+    "        'tic_id',\n",
+    "        'RA',\n",
+    "         'Dec',\n",
+    "         'Tmag',\n",
+    "         'Epoc',\n",
+    "         'Period',\n",
+    "         'Duration',\n",
+    "         'Transit_Depth',\n",
+    "         'Sectors',\n",
+    "         'star_rad',\n",
+    "         'star_mass',\n",
+    "         'teff',\n",
+    "         'logg',\n",
+    "         'SN',\n",
+    "         'Qingress',\n",
+    "         'disp_e',\n",
+    "         'disp_p',\n",
+    "         'disp_n',\n",
+    "         'disp_b',\n",
+    "         'disp_t',\n",
+    "         'disp_u',\n",
+    "    ]]\n",
+    "    ebs = ebs.drop_duplicates()\n",
+    "\n",
+    "    ebs['rand'] = ebs.apply(lambda r: np.random.randint(0, 100), axis=1)\n",
+    "\n",
+    "    toi_pe = toi.append(ebs)\n",
+    "    toi_pe.to_csv('/mnt/tess/labels/tce_toi_vetting_p+eb.csv')\n",
     "    \n",
-    "    toi.to_csv('/mnt/tess/labels/tce_toi_vetting_processed.csv')\n"
+    "    print('TOIs:', len(toi), 'EBs:', len(ebs), 'All:', len(toi_pe))\n",
+    "\n",
+    "clean_tois()"
    ]
   }
  ],
