--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "tces_file = '/mnt/tess/labels/tce_bls_to_y3.csv'\n",
     "ext_data_file = '/mnt/tess/labels/ext_mast_data.csv'\n",
-    "labels_file = '/mnt/tess/labels/labels_v8.csv'\n",
+    "labels_file = '/mnt/tess/labels/labels_v9.csv'\n",
     "splits_file = '/mnt/tess/labels/splits_v4.csv'\n",
     "filter_unreviewed = True\n",
     "\n",
@@ -113,9 +113,9 @@
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "print(f'Duplicate TICs: {len(all_table.index.values) - len(set(all_table.index.values))}')\n",
     "\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-v8-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-v8-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-v8-test.csv')\n",
+    "t_train.to_csv('/mnt/tess/astronet/tces-v9-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-v9-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-v9-test.csv')\n",
     "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
