Update LC paths.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -9,14 +9,16 @@
     "import os\n",
     "import tensorflow as tf\n",
     "\n",
-    "tces_file = '/mnt/tess/astronet/tces-vetting-v4-toi-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-vetting-5-toi-train/*'\n",
-    "model_name = 'AstroCNNModelVetting'\n",
-    "config_name = 'vrevised'\n",
-    "labels = ['p', 'e', 'n']\n",
-    "# model_name = 'AstroCNNModel'\n",
-    "# config_name = 'revised'\n",
-    "# labels = ['E', 'N', 'J', 'S', 'B']\n",
+    "# tces_file = '/mnt/tess/astronet/tces-vetting-v4-toi-train.csv'\n",
+    "# file_pattern = '/mnt/tess/astronet/tfrecords-vetting-5-toi-train/*'\n",
+    "# model_name = 'AstroCNNModelVetting'\n",
+    "# config_name = 'vrevised'\n",
+    "# labels = ['p', 'e', 'n']\n",
+    "tces_file = '/mnt/tess/astronet/tces-v9-val.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-31-val/*'\n",
+    "model_name = 'AstroCNNModel'\n",
+    "config_name = 'revised'\n",
+    "labels = ['E', 'N', 'J', 'S', 'B']\n",
     "\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
     "    \n",
