Update vetting pipeline.

--- a/Lightcurve-vetting.ipynb
+++ b/Lightcurve-vetting.ipynb
@@ -4,15 +4,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "from IPython.core.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "plot_all(113428669,\n",
+    "#          rpt_only=True,\n",
+    "#          large=True,\n",
+    "#          bkspace=5.0,\n",
+    "#          abs_xlim='3p',\n",
+    "#          abs_offset=6,\n",
+    "#          abs_xlim=(1300, 2500),\n",
+    "#          abs_ylim='3%',\n",
+    "#          abs_ylim=(0.975, 1.01),\n",
+    "#          item_no=5\n",
+    "        )"
    ]
   },
   {
@@ -26,21 +32,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "plot_all(113594232,\n",
-    "#          rpt_only=True,\n",
-    "#          large=True,\n",
-    "#          bkspace=5.0,\n",
-    "#          abs_xlim='3p',\n",
-    "#          abs_offset=6,\n",
-    "#          abs_xlim=(1300, 2500),\n",
-    "#          abs_ylim='3%',\n",
-    "#          abs_ylim=(0.975, 1.01),\n",
-    "#          item_no=5\n",
-    "        )"
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -65,6 +65,9 @@
     "\n",
     "tce_files = [\n",
     "    '/mnt/tess/astronet/tces-vetting-all.csv',\n",
+    "    '/mnt/tess/astronet/tces-vetting-v5-toi-train.csv',\n",
+    "    '/mnt/tess/astronet/tces-vetting-v5-toi-val.csv',\n",
+    "    '/mnt/tess/astronet/tces-vetting-v5-toi-test.csv',\n",
     "]\n",
     "\n",
     "\n",
