--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -26,9 +26,6 @@
     "splits_file = '/mnt/tess/labels/splits_v4.csv'\n",
     "filter_unreviewed = True\n",
     "\n",
-    "# labels_file = '/mnt/tess/labels/labels_v9unfiltered.csv'\n",
-    "# filter_unreviewed = False\n",
-    "\n",
     "\n",
     "tce_table = pd.read_csv(tces_file, header=0, low_memory=False).set_index('tic_id')\n",
     "tce_table = tce_table.drop(columns=['Unnamed: 0'])\n",
@@ -113,10 +110,10 @@
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "print(f'Duplicate TICs: {len(all_table.index.values) - len(set(all_table.index.values))}')\n",
     "\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-v9-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-v9-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-v9-test.csv')\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
+    "# t_train.to_csv('/mnt/tess/astronet/tces-v9-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-v9-val.csv')\n",
+    "# t_test.to_csv('/mnt/tess/astronet/tces-v9-test.csv')\n",
+    "# all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
   {
