--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -22,7 +22,7 @@
     "pd.set_option('display.max_columns', 50)\n",
     "\n",
     "def generate_data(include_toi):\n",
-    "    tces_file = '/mnt/tess/labels/tce_bls_instar+old.csv'\n",
+    "    tces_file = '/mnt/tess/labels/tce_bls_to_y3.csv'\n",
     "    labels_file = '/mnt/tess/labels/labels_vetting_v1.csv'\n",
     "    corrections_file = '/mnt/tess/labels/e_label_ephemerides.csv'\n",
     "\n",
@@ -82,7 +82,7 @@
     "    joined_table = joined_table.join(labels_table, on='tic_id', how='inner')\n",
     "\n",
     "\n",
-    "    toi = pd.read_csv('/mnt/tess/labels/tce_toi_vetting_v2.csv', header=0, low_memory=False).set_index('tic_id')\n",
+    "    toi = pd.read_csv('/mnt/tess/labels/tce_toi_vetting_p+eb.csv', header=0, low_memory=False).set_index('tic_id')\n",
     "\n",
     "    np.random.seed(1117)\n",
     "    toi['rand'] = np.random.randint(0, 100, [len(toi)])\n",
@@ -90,7 +90,7 @@
     "    toi = toi.drop(columns=['rand'])\n",
     "    \n",
     "    if include_toi:\n",
-    "        # Trust the curated labels. This might help us to detect any inconsisytencies in TOI.\n",
+    "        # Trust the curated labels. This might help us to detect any inconsisitencies in TOI.\n",
     "        toi = toi[~toi.index.isin(joined_table.index.values)]\n",
     "        joined_table = joined_table.append(toi)\n",
     "\n",
@@ -119,16 +119,16 @@
     "\n",
     "\n",
     "t_train, t_val, t_test, all_table = generate_data(True)\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v6-toi-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v6-toi-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v6-toi-test.csv')\n",
+    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v7-toi-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v7-toi-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v7-toi-test.csv')\n",
     "\n",
     "all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')\n",
     "\n",
-    "t_train, t_val, t_test, all_table = generate_data(False)\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v6-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v6-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v6-test.csv')\n"
+    "t_train, t_val, t_test, _ = generate_data(False)\n",
+    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v7-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v7-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v7-test.csv')\n"
    ]
   },
   {
@@ -157,25 +157,9 @@
     "import pandas as pd\n",
     "\n",
     "def clean_tois():\n",
-    "    toi = pd.read_csv('/mnt/tess/labels/toi_pc_instar.csv', header=0, low_memory=False)\n",
+    "    toi = pd.read_csv('/mnt/tess/labels/toi_p.csv', header=0, low_memory=False)\n",
     "\n",
-    "    toi = toi[toi['instar'] == False]\n",
-    "    toi = toi[toi['planet_period'] < 99999]\n",
-    "    toi = toi[toi['Master Disposition'].isin(['P', 'VPC', 'KP', 'PC', 'CPC'])]\n",
-    "\n",
-    "    toi['tic_id'] = toi['star_tic']\n",
-    "    toi['RA'] = toi['star_ra']\n",
-    "    toi['Dec'] = toi['star_dec']\n",
-    "    toi['Tmag'] = toi['star_tmag']\n",
-    "    toi['Epoc'] = toi['planet_epoch'] - 2457000\n",
-    "    toi['Period'] = toi['planet_period']\n",
-    "    toi['Duration'] = toi['planet_tdur'] / 24.0\n",
-    "    toi['Transit_Depth'] = toi['planet_depth']\n",
-    "    toi['Sectors'] = -1.0\n",
-    "    toi['teff'] = toi['star_teff']\n",
-    "    toi['logg'] = toi['star_logg']\n",
-    "    toi['SN'] = None\n",
-    "    toi['Qingress'] = None\n",
+    "    toi = toi[toi['Period'] < 99999]\n",
     "\n",
     "    toi['disp_p'] = 1\n",
     "    toi['disp_e'] = 0\n",
@@ -187,25 +171,22 @@
     "    toi = toi[[\n",
     "        'tic_id',\n",
     "        'RA',\n",
-    "         'Dec',\n",
-    "         'Tmag',\n",
-    "         'Epoc',\n",
-    "         'Period',\n",
-    "         'Duration',\n",
-    "         'Transit_Depth',\n",
-    "         'Sectors',\n",
-    "         'star_rad',\n",
-    "         'star_mass',\n",
-    "         'teff',\n",
-    "         'logg',\n",
-    "         'SN',\n",
-    "         'Qingress',\n",
-    "         'disp_e',\n",
-    "         'disp_p',\n",
-    "         'disp_n',\n",
-    "         'disp_b',\n",
-    "         'disp_t',\n",
-    "         'disp_u',\n",
+    "        'Dec',\n",
+    "        'Tmag',\n",
+    "        'Epoc',\n",
+    "        'Period',\n",
+    "        'Duration',\n",
+    "        'Transit_Depth',\n",
+    "        'star_rad',\n",
+    "        'star_mass',\n",
+    "        'teff',\n",
+    "        'logg',\n",
+    "        'disp_e',\n",
+    "        'disp_p',\n",
+    "        'disp_n',\n",
+    "        'disp_b',\n",
+    "        'disp_t',\n",
+    "        'disp_u',\n",
     "    ]]\n",
     "\n",
     "    toi['rand'] = toi.apply(lambda r: np.random.randint(0, 100), axis=1)\n",
@@ -222,13 +203,10 @@
     "    ebs['Period'] = ebs['per']\n",
     "    ebs['Duration'] = ebs['dur']\n",
     "    ebs['Transit_Depth'] = ebs['dep']\n",
-    "    ebs['Sectors'] = None\n",
     "    ebs['star_rad'] = None\n",
     "    ebs['star_mass'] = None\n",
     "    ebs['teff'] = None\n",
     "    ebs['logg'] = None\n",
-    "    ebs['SN'] = None\n",
-    "    ebs['Qingress'] = None\n",
     "\n",
     "    eb_labels = pd.read_csv('/mnt/tess/labels/additionalebs.csv', header=None, low_memory=False)\n",
     "    ebs = ebs.set_index('tic_id').join(eb_labels.set_index(0), how='inner').reset_index()\n",
@@ -260,25 +238,22 @@
     "    ebs = ebs[[\n",
     "        'tic_id',\n",
     "        'RA',\n",
-    "         'Dec',\n",
-    "         'Tmag',\n",
-    "         'Epoc',\n",
-    "         'Period',\n",
-    "         'Duration',\n",
-    "         'Transit_Depth',\n",
-    "         'Sectors',\n",
-    "         'star_rad',\n",
-    "         'star_mass',\n",
-    "         'teff',\n",
-    "         'logg',\n",
-    "         'SN',\n",
-    "         'Qingress',\n",
-    "         'disp_e',\n",
-    "         'disp_p',\n",
-    "         'disp_n',\n",
-    "         'disp_b',\n",
-    "         'disp_t',\n",
-    "         'disp_u',\n",
+    "        'Dec',\n",
+    "        'Tmag',\n",
+    "        'Epoc',\n",
+    "        'Period',\n",
+    "        'Duration',\n",
+    "        'Transit_Depth',\n",
+    "        'star_rad',\n",
+    "        'star_mass',\n",
+    "        'teff',\n",
+    "        'logg',\n",
+    "        'disp_e',\n",
+    "        'disp_p',\n",
+    "        'disp_n',\n",
+    "        'disp_b',\n",
+    "        'disp_t',\n",
+    "        'disp_u',\n",
     "    ]]\n",
     "    ebs = ebs.drop_duplicates()\n",
     "\n",
