Remove some more duplicates.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -15,7 +15,7 @@
     "# config_name = 'vrevised'\n",
     "# labels = ['p', 'e', 'n']\n",
     "tces_file = '/mnt/tess/astronet/tces-v9-val.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-31-val/*'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-32-val/*'\n",
     "model_name = 'AstroCNNModel'\n",
     "config_name = 'revised'\n",
     "labels = ['E', 'N', 'J', 'S', 'B']\n",
@@ -250,9 +250,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tic_id = 368435330\n",
+    "tic_id = 348962922\n",
     "plot_ds_tce(ds, tic_id)\n",
     "tce_table[tce_table['tic_id'] == tic_id]\n",
+    "examples_table[examples_table['tic_id'] == tic_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tce_table[tce_table['tic_id'] == tic_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "examples_table[examples_table['tic_id'] == tic_id]"
    ]
   },
