--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -87,7 +87,6 @@
     "    (labels_table['TIC ID'].isin(Y3_tics) & (labels_table.Hemisphere == 'Y3'))\n",
     "    | (labels_table['TIC ID'].isin(Y12_tics - Y3_tics) & (labels_table.Hemisphere != 'Y3'))]\n",
     "\n",
-    "\n",
     "labels_table = labels_table.set_index('tic_id')\n",
     "joined_table = joined_table.set_index('tic_id')\n",
     "joined_table = joined_table.join(labels_table, on='tic_id', how='inner')\n",
@@ -110,10 +109,10 @@
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "print(f'Duplicate TICs: {len(all_table.index.values) - len(set(all_table.index.values))}')\n",
     "\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-v9-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-v9-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-v9-test.csv')\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
+    "t_train.to_csv('/mnt/tess/astronet/tces-v10-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-v10-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-v10-test.csv')\n",
+    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
   {
@@ -218,19 +217,16 @@
     "    tcenew = pd.read_csv('/mnt/tess/labels/Y3_cand_instar.csv', header=0, low_memory=False)\n",
     "    actual_eph = pd.read_csv('/mnt/tess/labels/updated_ephemerides_triage.csv', header=0, low_memory=False)\n",
     "    tceold = pd.read_csv('/mnt/tess/labels/tce_bls_instar+old.csv', header=0, low_memory=False)\n",
-    "    \n",
+    "\n",
     "    tceold = tceold.drop(columns=['Unnamed: 0', 'a', 'ccd', 'camera', 'row_id_max', 'Disposition', 'toi_id'])\n",
-    "    \n",
+    "\n",
     "    actual_eph['tic_id'] = actual_eph['tic']\n",
-    "    \n",
+    "\n",
     "    tcenew['tic_id'] = tcenew['star_tic']\n",
     "    tcenew['tic_id'] = tcenew['star_tic']\n",
     "    tcenew['RA'] = tcenew['star_ra']\n",
     "    tcenew['Dec'] = tcenew['star_dec']\n",
     "    tcenew['Tmag'] = tcenew['star_tmag']\n",
-    "#     tcenew['Epoc'] = tcenew['planet_epoch']\n",
-    "#     tcenew['Period'] = tcenew['planet_period']\n",
-    "#     tcenew['Duration'] = tcenew['planet_tdur']\n",
     "    tcenew['Transit_Depth'] = tcenew['planet_depth']\n",
     "    tcenew['Sectors'] = tcenew.apply(lambda row: len(row['sector_id'].split(' ')), axis=1)\n",
     "    tcenew['Sectors_max'] = tcenew.apply(lambda row: max(row['sector_id'].split(' ')), axis=1)\n",
@@ -239,17 +235,18 @@
     "    tcenew['SN'] = tcenew['star_rad']\n",
     "    tcenew['Qingress'] = tcenew['star_rad']\n",
     "    tcenew['Ilabel'] = tcenew['instar']\n",
-    "        \n",
+    "\n",
     "    actual_eph = actual_eph.set_index('tic_id')\n",
-    "    \n",
+    "\n",
     "    tcenew = tcenew.join(actual_eph, how='inner', on='tic_id', rsuffix='_eph')\n",
     "    tcenew['Epoc'] = tcenew['epo']\n",
     "    tcenew['Period'] = tcenew['per']\n",
     "    tcenew['Duration'] = tcenew['dur']\n",
-    "    \n",
+    "\n",
     "    tcenew = tcenew[tceold.columns]\n",
     "    tcenew = tcenew.drop_duplicates(subset='tic_id')\n",
-    "    \n",
+    "    tceold = tceold[~tceold.tic_id.isin(tcenew.tic_id)]\n",
+    "\n",
     "    alltce = tceold\n",
     "    alltce = alltce.append(tcenew)\n",
     "    \n",
