--- a/Data.ipynb
+++ b/Data.ipynb
@@ -14,10 +14,10 @@
     "# model_name = 'AstroCNNModelVetting'\n",
     "# config_name = 'vrevised'\n",
     "# labels = ['p', 'e', 'n']\n",
-    "tces_file = '/mnt/tess/astronet/tces-v9-val.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-32-val/*'\n",
+    "tces_file = '/mnt/tess/astronet/tces-v10-val.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-33-val/*'\n",
     "model_name = 'AstroCNNModel'\n",
-    "config_name = 'revised'\n",
+    "config_name = 'revised_tuned'\n",
     "labels = ['E', 'N', 'J', 'S', 'B']\n",
     "\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
@@ -121,6 +121,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "print('TICs with labels mismatched between TCE and tfrecords:')\n",
     "np.array(set(tce_table[tce_table[f'disp_{labels[0]}'] > 0]['tic_id'].values)\n",
     "    - set(examples_table[examples_table[f'disp_{labels[0]}'] > 0]['tic_id'].values))"
    ]
