--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(55404385,\n",
+    "plot_all(277316602,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -39,7 +39,7 @@
     "#          abs_xlim=(2285, 2290),\n",
     "#          abs_ylim='3%',\n",
     "#          abs_ylim=(0.9, 1.1),\n",
-    "#          item_no=1\n",
+    "#          item_no=1,\n",
     "        )"
    ]
   },
@@ -64,7 +64,8 @@
     "tce_tables = {}\n",
     "\n",
     "tce_files = [\n",
-    "    '/mnt/tess/astronet/tces-tmp-all.csv',\n",
+    "    '/mnt/tess/astronet/tces-v11-all.csv',\n",
+    "#     '/mnt/tess/astronet/tces-tmp-all.csv',\n",
     "    '/mnt/tess/astronet/tces-toi.csv',\n",
     "    '/mnt/tess/astronet/tces-s33_cam1_sample.csv',\n",
     "    '/mnt/tess/astronet/tces-s33_cam2ccd14_sample.csv',\n",
@@ -218,7 +219,7 @@
     "\n",
     "    row = list(tce.iterrows())[0][1]\n",
     "\n",
-    "    ex = generate_input_records._process_tce(row, bkspace)\n",
+    "    ex, _ = generate_input_records._process_tce(row, bkspace)\n",
     "    \n",
     "    \n",
     "    def plot_w_scatter(view, std, title, mask=None):\n",
@@ -291,10 +292,13 @@
     "    plot_segments('sample_segments_local_view_5.0', 'even @5.0', num_chans=16, min_chans=8, max_chans=16)\n",
     "    \n",
     "    try:\n",
+    "      try:\n",
+    "        im = plt.imread(f'{reports_dir}/{tic}.png')\n",
+    "      except:\n",
     "        im = plt.imread(f'{reports_dir}/TIC{tic}.png')\n",
-    "        plt.figure(figsize=(12, 8), dpi=dpi)\n",
-    "        plt.axis('off')\n",
-    "        _ = plt.imshow(im)\n",
+    "      plt.figure(figsize=(16, 10), dpi=dpi)\n",
+    "      plt.axis('off')\n",
+    "      _ = plt.imshow(im)\n",
     "    except FileNotFoundError:\n",
     "        print('-- no report file --')\n"
    ]
