--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(277316602,\n",
+    "plot_all(168936825,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -219,7 +219,7 @@
     "\n",
     "    row = list(tce.iterrows())[0][1]\n",
     "\n",
-    "    ex, _ = generate_input_records._process_tce(row, bkspace)\n",
+    "    ex = generate_input_records._process_tce(row, bkspace)\n",
     "    \n",
     "    \n",
     "    def plot_w_scatter(view, std, title, mask=None):\n",
