Fix preprocessing bug.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -14,8 +14,8 @@
     "# model_name = 'AstroCNNModelVetting'\n",
     "# config_name = 'vrevised'\n",
     "# labels = ['p', 'e', 'n']\n",
-    "tces_file = '/mnt/tess/astronet/tces-v10-val.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-33-val/*'\n",
+    "tces_file = '/mnt/tess/astronet/tces-v11-train.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-34-train/*'\n",
     "model_name = 'AstroCNNModel'\n",
     "config_name = 'revised_tuned'\n",
     "labels = ['E', 'N', 'J', 'S', 'B']\n",
@@ -111,6 +111,15 @@
    "outputs": [],
    "source": [
     "examples_table.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tce_table[tce_table.index == 91152385]"
    ]
   },
   {
