--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(168936825,\n",
+    "plot_all(70887357,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -71,6 +71,9 @@
     "    '/mnt/tess/astronet/tces-s33_cam2ccd14_sample.csv',\n",
     "]\n",
     "\n",
+    "tess_data_dir = f'/mnt/tess/lc'\n",
+    "reports_dir = f'/mnt/tess/rpt/png'\n",
+    "\n",
     "\n",
     "def get_tce(tic, item_no):\n",
     "    for f in tce_files:\n",
@@ -90,6 +93,19 @@
     "    raise ValueError(f'no TCE data for {tic}')\n",
     "\n",
     "\n",
+    "def plot_rpt(tic, dpi):\n",
+    "  try:\n",
+    "    try:\n",
+    "      im = plt.imread(f'{reports_dir}/{tic}.png')\n",
+    "    except FileNotFoundError:\n",
+    "      im = plt.imread(f'{reports_dir}/TIC{tic}.png')\n",
+    "    plt.figure(figsize=(16, 10), dpi=dpi)\n",
+    "    plt.axis('off')\n",
+    "    _ = plt.imshow(im)\n",
+    "  except FileNotFoundError:\n",
+    "      print('-- no report file --')\n",
+    "\n",
+    "\n",
     "def plot_all(tic,\n",
     "             large=False,\n",
     "             dpi=100,\n",
@@ -99,17 +115,9 @@
     "             abs_ylim=None,\n",
     "             rpt_only=False,\n",
     "             item_no=0):\n",
-    "    tess_data_dir = f'/mnt/tess/lc'\n",
-    "    reports_dir = f'/mnt/tess/rpt/png'\n",
-    "\n",
     "    if rpt_only:\n",
-    "        plt.figure(figsize=(12, 8), dpi=dpi)\n",
-    "        plt.axis('off')\n",
-    "        im = plt.imread(f'{reports_dir}/TIC{tic}.png')\n",
-    "        _ = plt.imshow(im)\n",
-    "        plt.show()\n",
-    "        print(get_tce(tic, item_no)[0])\n",
-    "        return\n",
+    "      plot_rpt(tic, dpi)\n",
+    "      return\n",
     "        \n",
     "    b = plt.get_cmap('tab20')(0)\n",
     "    b2 = plt.get_cmap('tab20')(1)\n",
@@ -290,17 +298,8 @@
     "    plot_w_scatter('local_view_odd_5.0', 'local_std_odd_5.0', 'local odd @5.0')\n",
     "    plot_segments('sample_segments_local_view_5.0', 'odd @5.0', num_chans=16, min_chans=0, max_chans=8)\n",
     "    plot_segments('sample_segments_local_view_5.0', 'even @5.0', num_chans=16, min_chans=8, max_chans=16)\n",
-    "    \n",
-    "    try:\n",
-    "      try:\n",
-    "        im = plt.imread(f'{reports_dir}/{tic}.png')\n",
-    "      except:\n",
-    "        im = plt.imread(f'{reports_dir}/TIC{tic}.png')\n",
-    "      plt.figure(figsize=(16, 10), dpi=dpi)\n",
-    "      plt.axis('off')\n",
-    "      _ = plt.imshow(im)\n",
-    "    except FileNotFoundError:\n",
-    "        print('-- no report file --')\n"
+    "\n",
+    "    plot_rpt(tic, dpi)"
    ]
   }
  ],
