--- a/Tune.ipynb
+++ b/Tune.ipynb
@@ -52,7 +52,7 @@
     "])\n",
     "\n",
     "\n",
-    "# client = tune.initialize_client()"
+    "client = tune.initialize_client()"
    ]
   },
   {
@@ -133,7 +133,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Best so far: `projects/mdan-playground/locations/us-central1/studies/30_revised_1c_revised` (33 - 0.046386852860450745)"
+    "Best so far: `projects/mdan-playground/locations/us-central1/studies/30_revised_1c_revised` (33 - 0.046386852860450745)\n",
+    "\n",
+    "New best: `projects/mdan-playground/locations/us-central1/studies/33_revised_1b_revised` (546 0.046330880373716354)"
    ]
   },
   {
@@ -184,7 +186,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune.py --model=AstroCNNModel --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-30-train/* --eval_files=/mnt/tess/astronet/tfrecords-30-val/* --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=30_revised_1\n",
+    "python astronet/tune.py --model=AstroCNNModel --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-33-train/* --eval_files=/mnt/tess/astronet/tfrecords-33-val/* --train_steps=0 --tune_trials=1000 --client_secrets=../client_secrets.json --study_id=33_revised_1\n",
     "```"
    ]
   }
