Fix bug in preprocessing.

--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -32,6 +32,7 @@
     "  'Transit_Depth', 'star_rad', 'star_mass',\n",
     "  'filename', 'Split'\n",
     "]]\n",
+    "joined_table = joined_table.set_index('tic_id')\n",
     "\n",
     "\n",
     "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
