--- a/Data.ipynb
+++ b/Data.ipynb
@@ -295,11 +295,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TIC ID: 368435330\n",
+      "E: 1\n",
+      "N: 0\n",
+      "J: 0\n",
+      "S: 0\n",
+      "B: 0\n",
+      "Duration: 0.12832868099212646\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['secondary_view',\n",
+       " 'secondary_scale',\n",
+       " 'global_std_5.0',\n",
+       " 'secondary_std_5.0',\n",
+       " 'global_view_half_period_std_0.3',\n",
+       " 'secondary_mask_0.3',\n",
+       " 'global_std',\n",
+       " 'secondary_view_5.0',\n",
+       " 'local_scale_0.3',\n",
+       " 'sample_segments_view_0.3',\n",
+       " 'local_std_odd_0.3',\n",
+       " 'global_view_half_period_5.0',\n",
+       " 'sample_segments_view_5.0',\n",
+       " 'local_view_5.0',\n",
+       " 'Tmag_present',\n",
+       " 'global_view_double_period',\n",
+       " 'Tmag',\n",
+       " 'secondary_phase',\n",
+       " 'Duration_present',\n",
+       " 'local_view_odd',\n",
+       " 'sample_segments_view',\n",
+       " 'secondary_scale_present',\n",
+       " 'global_view_double_period_std_0.3',\n",
+       " 'local_scale_present_5.0',\n",
+       " 'n_points',\n",
+       " 'local_mask_even_0.3',\n",
+       " 'local_mask_0.3',\n",
+       " 'disp_E',\n",
+       " 'n_folds',\n",
+       " 'local_std_even_5.0',\n",
+       " 'global_transit_mask_5.0',\n",
+       " 'sample_segments_local_view',\n",
+       " 'secondary_mask_5.0',\n",
+       " 'Period_present',\n",
+       " 'local_view_even',\n",
+       " 'Transit_Depth',\n",
+       " 'global_view',\n",
+       " 'global_mask_0.3',\n",
+       " 'local_view_half_period_std',\n",
+       " 'star_rad_present',\n",
+       " 'local_view_half_period',\n",
+       " 'global_view_5.0',\n",
+       " 'secondary_phase_5.0',\n",
+       " 'local_view_even_0.3',\n",
+       " 'disp_N',\n",
+       " 'local_std',\n",
+       " 'tic_id',\n",
+       " 'local_mask_odd_5.0',\n",
+       " 'local_scale_present',\n",
+       " 'secondary_scale_present_5.0',\n",
+       " 'global_mask',\n",
+       " 'secondary_std',\n",
+       " 'local_view_0.3',\n",
+       " 'local_mask_even_5.0',\n",
+       " 'local_mask_even',\n",
+       " 'secondary_std_0.3',\n",
+       " 'secondary_scale_0.3',\n",
+       " 'secondary_scale_5.0',\n",
+       " 'Epoc',\n",
+       " 'local_mask_odd_0.3',\n",
+       " 'global_transit_mask',\n",
+       " 'local_std_5.0',\n",
+       " 'local_std_0.3',\n",
+       " 'disp_S',\n",
+       " 'local_scale',\n",
+       " 'local_view_odd_5.0',\n",
+       " 'Transit_Depth_present',\n",
+       " 'sample_segments_local_view_5.0',\n",
+       " 'global_transit_mask_0.3',\n",
+       " 'local_mask_odd',\n",
+       " 'star_mass',\n",
+       " 'local_std_odd',\n",
+       " 'star_rad',\n",
+       " 'global_view_half_period_std_5.0',\n",
+       " 'local_view',\n",
+       " 'global_view_half_period_std',\n",
+       " 'global_view_half_period_0.3',\n",
+       " 'local_view_half_period_std_5.0',\n",
+       " 'local_mask_5.0',\n",
+       " 'local_scale_5.0',\n",
+       " 'local_mask',\n",
+       " 'disp_B',\n",
+       " 'secondary_mask',\n",
+       " 'global_view_half_period',\n",
+       " 'local_std_even_0.3',\n",
+       " 'global_view_double_period_5.0',\n",
+       " 'local_view_even_5.0',\n",
+       " 'local_view_odd_0.3',\n",
+       " 'global_mask_5.0',\n",
+       " 'Duration',\n",
+       " 'global_view_double_period_0.3',\n",
+       " 'local_view_half_period_0.3',\n",
+       " 'global_std_0.3',\n",
+       " 'local_std_odd_5.0',\n",
+       " 'local_view_half_period_5.0',\n",
+       " 'sample_segments_local_view_0.3',\n",
+       " 'secondary_scale_present_0.3',\n",
+       " 'local_std_even',\n",
+       " 'local_view_half_period_std_0.3',\n",
+       " 'global_view_0.3',\n",
+       " 'secondary_view_0.3',\n",
+       " 'secondary_phase_0.3',\n",
+       " 'global_view_double_period_std_5.0',\n",
+       " 'disp_J',\n",
+       " 'Period',\n",
+       " 'local_scale_present_0.3',\n",
+       " 'Epoc_present',\n",
+       " 'global_view_double_period_std',\n",
+       " 'star_mass_present',\n",
+       " 'filename']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tce = find_tce(368435330)\n",
     "\n",
