--- a/Tune.ipynb
+++ b/Tune.ipynb
@@ -186,7 +186,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune.py --model=AstroCNNModel --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-33-train/* --eval_files=/mnt/tess/astronet/tfrecords-33-val/* --train_steps=0 --tune_trials=1000 --client_secrets=../client_secrets.json --study_id=33_revised_1\n",
+    "python astronet/tune.py --model=AstroCNNModel --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-34-train/* --eval_files=/mnt/tess/astronet/tfrecords-34-val/* --train_steps=0 --tune_trials=1000 --client_secrets=../client_secrets.json --study_id=33_revised_1e\n",
     "```"
    ]
   }
