--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(389433788,\n",
+    "plot_all(416282321,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -142,7 +142,7 @@
     "    epoc = tce.Epoc.values.item()\n",
     "    duration = tce.Duration.values.item()\n",
     "\n",
-    "    print(f'Epoc: {epoc}\\nPeriod: {period}\\nDuration: {duration}')\n",
+    "    print(tce)\n",
     "    \n",
     "    def config_abs_plot(title):\n",
     "        plt.legend()\n",
