--- a/Train.ipynb
+++ b/Train.ipynb
@@ -12,14 +12,14 @@
     "from astronet import train\n",
     "\n",
     "model_name = 'AstroCNNModel'\n",
-    "config_name = 'revised_tuned'\n",
+    "config_name = 'revised'\n",
     "\n",
     "def run_training(ensemble_no=1):\n",
     "    train.FLAGS = train.parser.parse_args([\n",
     "      '--model', model_name,\n",
     "      '--config_name', config_name,\n",
-    "      '--train_files', '/mnt/tess/astronet/tfrecords-30-train/*',\n",
-    "      '--eval_files', '/mnt/tess/astronet/tfrecords-30-val/*',\n",
+    "      '--train_files', '/mnt/tess/astronet/tfrecords-35-train/*',\n",
+    "      '--eval_files', '/mnt/tess/astronet/tfrecords-35-val/*',\n",
     "      '--model_dir', '',\n",
     "      '--train_epochs', '1',\n",
     "      '--train_steps', '1'\n",
