--- a/Data.ipynb
+++ b/Data.ipynb
@@ -14,8 +14,8 @@
     "# model_name = 'AstroCNNModelVetting'\n",
     "# config_name = 'vrevised'\n",
     "# labels = ['p', 'e', 'n']\n",
-    "tces_file = '/mnt/tess/astronet/tces-v12-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-35-train/*'\n",
+    "tces_file = '/mnt/tess/astronet/tces-v12-y2-train.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-35-y2-train/*'\n",
     "model_name = 'AstroCNNModel'\n",
     "config_name = 'revised_tuned'\n",
     "labels = ['E', 'N', 'J', 'S', 'B']\n",
@@ -191,9 +191,24 @@
     "      shuffle_filenames=False,\n",
     "      repeat=1,\n",
     "      include_identifiers=True)\n",
+    "labels_ds = input_ds.build_dataset(\n",
+    "      file_pattern=file_pattern,\n",
+    "      input_config=config.inputs,\n",
+    "      batch_size=1,\n",
+    "      include_labels=True,\n",
+    "      shuffle_filenames=False,\n",
+    "      repeat=1,\n",
+    "      include_identifiers=True)\n",
+    "labels_iter = iter(labels_ds)\n",
+    "\n",
+    "label_index = {k.lower(): i for i, k in enumerate(config.inputs.label_columns)}\n",
+    "cols = [\"disp_E\", \"disp_N\", \"disp_J\", \"disp_S\", \"disp_B\"]\n",
     "\n",
     "all_tics = []\n",
+    "bad_labels = []\n",
     "for d in ds:\n",
+    "  lab = next(labels_iter)\n",
+    "  \n",
     "  def lam(e):\n",
     "    if e.dtype == tf.int64:\n",
     "        return e\n",
@@ -203,6 +218,20 @@
     "    return e\n",
     "  tic_id = d[1].numpy().item()\n",
     "  all_tics.append(tic_id)\n",
+    "  \n",
+    "  assert lab[0]['duration'] == d[0]['duration']\n",
+    "  rec = tce_table[tce_table.tic_id == tic_id]\n",
+    "  for c in cols:\n",
+    "    if (lab[1][0][label_index[c.lower()]].numpy() == 0) != (rec[c].values[0] == 0):\n",
+    "      bad_labels.append(tic_id)\n",
+    "      print('bad tic: ', tic_id)\n",
+    "      print(rec)\n",
+    "      print(cols)\n",
+    "      print(lab[1][0])\n",
+    "      break\n",
+    "  if bad_labels:\n",
+    "    break\n",
+    "  \n",
     "  try:\n",
     "    tf.nest.map_structure(lam, d)\n",
     "  except ValueError as e:\n",
@@ -210,7 +239,7 @@
     "    print(d[1])\n",
     "    break\n",
     "else:\n",
-    "  print('No NaNs found.')\n",
+    "  print('No NaNs or mismtached labels found.')\n",
     "\n",
     "if len(all_tics) == len(set(all_tics)):\n",
     "  print('No duplicates found.')\n",
