--- a/Preprocess-y2.ipynb
+++ b/Preprocess-y2.ipynb
@@ -23,8 +23,13 @@
     "tces_file = '/mnt/tess/labels/tces-triage-v12.csv'\n",
     "labels_file = '/mnt/tess/labels/labels-triage-v12.csv'\n",
     "\n",
+    "y2_tics = pd.read_csv('/mnt/tess/labels/labels_v6.csv', header=0, low_memory=False).set_index('TIC ID')\n",
+    "\n",
     "tce_table = pd.read_csv(tces_file, header=0, low_memory=False).set_index('tic_id')\n",
-    "tce_table = tce_table[tce_table.Exclude != 'Y']\n",
+    "tce_table = tce_table[~tce_table.instar]\n",
+    "\n",
+    "tce_table = tce_table[tce_table.index.isin(y2_tics.index)]\n",
+    "\n",
     "\n",
     "joined_table = tce_table\n",
     "joined_table = joined_table.reset_index()[[\n",
@@ -37,6 +42,7 @@
     "\n",
     "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
     "labels_table['tic_id'] = labels_table['TIC ID']\n",
+    "labels_table = labels_table[labels_table.index <= 26382 - 2]\n",
     "\n",
     "disps = ['E', 'J', 'N', 'S', 'B']\n",
     "users = ['av', 'md', 'ch', 'as', 'mk', 'et', 'dm', 'td']\n",
@@ -80,10 +86,10 @@
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "print(f'Duplicate TICs: {len(all_table.index.values) - len(set(all_table.index.values))}')\n",
     "\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-v12-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-v12-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-v12-test.csv')\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-v12-all.csv')"
+    "t_train.to_csv('/mnt/tess/astronet/tces-v12-y2-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-v12-y2-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-v12-y2-test.csv')\n",
+    "all_table.to_csv('/mnt/tess/astronet/tces-v12-y2-all.csv')"
    ]
   },
   {
